JDK 13 and JDKs under 13 have different implementation, adapt the code to work with all JDKs.