@@ -179,7 +179,7 @@ public class TestBase {
     RSAPrivateKey rsaPrivateKeyTemplate = new RSAPrivateKey();
 
     // set the general attributes for the public key
-    rsaPublicKeyTemplate.getModulusBits().setLongValue(new Long(1024));
+    rsaPublicKeyTemplate.getModulusBits().setLongValue(Long.valueOf(1024));
     byte[] publicExponentBytes = { 0x01, 0x00, 0x01 }; // 2^16 + 1
     rsaPublicKeyTemplate.getPublicExponent()
         .setByteArrayValue(publicExponentBytes);
